# winparsingtools

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: date_time.rs  file_system.rs  lib.rs  reader_error.rs  traits.rs  utils.rs
src/file_system/: file_reference.rs  mod.rs
src/structs/: extra_data_block.rs  guid.rs  mod.rs  string_data.rs
src/structs/shell_items/: control_panel_category.rs  control_panel_item.rs  file_entry.rs  id_list.rs  mod.rs  network_location.rs  root.rs  uri.rs  users_files_folder.rs  volume.rs
src/utils/: mod.rs  rot13.rs
tests/: lib_tests.rs
