[package]
name = "winparsingtools"
description = "collection of structs and utilities for parsing windows binary formats."
homepage = "https://github.com/AbdulRhmanAlfaifi/winparsingtools"
repository = "https://github.com/AbdulRhmanAlfaifi/winparsingtools"
version = "2.0.0"
authors = ["AbdulRhman Alfaifi <@A__ALFAIFI>"]
edition = "2018"
license = "MIT"

[dependencies]
byteorder = "1.4.2"
bitreader = "0.3.3"
chrono = "0.4.19"
serde = { features = ["derive"], version = "1.0.123"}
serde_json = "1.0.61"
thiserror = "1"
encoding_rs = "0.8"